# robot_manipulator

./: CMakeLists.txt  README.md  package.xml
env-hooks/: robot_manipulator.dsv.in
launch/: aws_warehouse_robot_spawner_launch.py  xacro_to_urdf_launch.py
models/robot_manipulator/: model.config  robot_manipulator.urdf
urdf/: caster_wheels.xacro  lidar.xacro  robot_manipulator.urdf.xacro  wheels.xacro
